Fixed typos and updated links

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
 								<ul>
 									<li><a class="scroll" href="#about">About me</a></li>
-									<li><a class="scroll" href="/Franklin_J_Lee-Resume-Combined.pdf">Résumé</a></li>
+									<li><a class="scroll" href="/Dylan_Davis_Resume.pdf">Résumé</a></li>
 
 								</ul>
 
@@ -130,7 +130,7 @@
 							<h1>Dylan Davis - Systems Administrator ⚙</h1>
 							</div>
 							<div class="sub">
-							<h4>Covington, Wa</h4>
+							<h4>Covington, Washington</h4>
 							</div>
 						</div>
 				</li>
@@ -142,7 +142,7 @@
 							<h1>Dylan Davis - Infosec Researcher </h1>
 							</div>
 								<div class="sub">
-								<h4>Covington, Wa</h4>
+								<h4>Covington, Washington</h4>
 								</div>
 						</div>
 					
@@ -156,7 +156,7 @@
 								<h1>Dylan Davis - Systems Architect 🤖</h1>
 								</div>
 									<div class="sub">
-									<h4>Covington, Wa</h4>
+									<h4>Covington, Washington</h4>
 									</div>
 							</div>
 
@@ -279,7 +279,7 @@
 
 											<div class="eight columns ">
 												<ul class="right">
-												<li><a href="https://www.linkedin.com/in/franklinjlee">LinkedIn</a></li>
+												<li><a href="https://www.linkedin.com/in/dylandavis">LinkedIn</a></li>
 												</ul>
 											</div>
 
